Fix parameter alignments

--- a/client/app/components/Parameters.less
+++ b/client/app/components/Parameters.less
@@ -16,10 +16,12 @@
 .parameter-block {
   display: inline-block;
   background: white;
-  padding: 3px 6px 6px;
+  padding: 0 12px 6px 0;
+  vertical-align: top;
 
   .parameter-container[data-draggable] & {
     margin: 4px 0 0 4px;
+    padding: 3px 6px 6px;
   }
 
   &.parameter-dragged {
